<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tarunkukreja.event_log_sponsor.contactUs.contactus">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen180dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/actor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize20sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/text_margin_10dp"
            android:layout_marginStart="@dimen/text_margin_10dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:onClick="contactUsViaCall">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/contactusPhoneicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:src="@drawable/phone_contact"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16sp" />

                <TextView
                    android:id="@+id/contactusPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:layout_toEndOf="@+id/contactusPhoneicon"
                    android:text="@string/_91_11_4986_5206"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/textsize16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contactusPhone"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/contactusPhoneicon"
                    android:text="@string/_24_hour_a_day_7_days_a_week"
                    android:textSize="@dimen/textsize12sp" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/text_margin_10dp"
            android:layout_marginStart="@dimen/text_margin_10dp"
            android:layout_marginTop="@dimen/text_margin_10dp"
            android:onClick="ContactUsViaMail">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/contactusMailus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:src="@drawable/mail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:layout_toEndOf="@+id/contactusMailus"
                    android:text="@string/markitier_info_gmail_com"
                    android:textSize="@dimen/textsize16sp" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/text_margin_10dp"
            android:layout_marginStart="@dimen/text_margin_10dp"
            android:layout_marginTop="@dimen/text_margin_10dp"
            android:onClick="ContactUsViaWebsite">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/contactusWebsite"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:src="@mipmap/ic_launcher"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/text_margin_10dp"
                    android:layout_marginTop="@dimen/text_margin_10dp"
                    android:layout_toEndOf="@+id/contactusWebsite"
                    android:text="www.eventsmosaic.in"
                    android:textSize="@dimen/textsize16sp" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_10dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:text="@string/corporate_office"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_10dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:lineSpacingExtra="@dimen/text_margin_4dp"
            android:text="C-9 Vasant kunj \nNew Delhi - 110070"
            android:textAppearance="?android:attr/textAppearanceSmall" />



            <LinearLayout
                android:layout_marginTop="@dimen/dimen20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="contactUsViaInstagram"
                    android:padding="2dp"
                    android:src="@drawable/instagram" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="contactUsViaFacebook"
                    android:padding="2dp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="contactUsViaTwitter"
                    android:padding="2dp"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="contactUsViaPinterest"
                    android:padding="2dp"
                    android:src="@drawable/pinterest" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="contactUsViaTumblr"
                    android:padding="2dp"
                    android:src="@drawable/tumblr" />

            </LinearLayout>


    </LinearLayout>
</ScrollView>
