<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_trend"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/trendingrelativetwo"
                android:layout_width="match_parent"
                android:layout_height="60dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:id="@+id/trendingeventmonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="JUL"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textsize14sp" />

                        <TextView
                            android:id="@+id/trending_event_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/trendingeventmonth"
                            android:layout_marginStart="16dp"
                            android:padding="5dp"
                            android:text="8"
                            android:textColor="@color/textcolor"
                            android:textSize="@dimen/textsize18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="4">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:id="@+id/trendingeventname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"


                            android:layout_marginTop="8dp"

                            android:maxLines="1"
                            android:text="@string/beach_house_party"
                            android:textColor="@color/textcolor"

                            android:textSize="@dimen/textsize18sp" />


                        <TextView
                            android:id="@+id/trendingeventlocationname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/trendingeventname"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_toEndOf="@+id/trendingeventlocationicon"
                            android:maxLines="1"
                            android:paddingStart="8dp"
                            android:text="@string/bondi_beach"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textsize16sp" />

                        <ImageView
                            android:id="@+id/trendingeventlocationicon"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_below="@+id/trendingeventname"
                            android:layout_marginTop="5dp" />

                    </RelativeLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/trendingEventRelative"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:id="@+id/trendingeventattendingcount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/text_margin"

                            android:layout_marginStart="4dp"

                            android:textSize="@dimen/textsize14sp" />

                        <ImageView
                            android:id="@+id/trendingeventattendingicon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/trendingeventattendingcount"
                             />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/trendingeventImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_below="@+id/trendingrelativetwo"
                android:scaleType="centerCrop"
                android:src="@drawable/event_music" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/hideInForYou"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent">


                        <TextView
                            android:id="@+id/trendingeventinterested"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="10dp"
                            android:text="@string/interested"
                            android:textSize="@dimen/textsize14sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/trendingeventinterested" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/trendingRelativeEventShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">


                        <TextView
                            android:id="@+id/trendingeventshare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="10dp"
                            android:text="@string/share"
                            android:textSize="@dimen/textsize14sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/trendingeventshare"
                            />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
